# ProjectMGServer

./: .gitignore  CMakeLists.txt  vcpkg.json
docs/: Packets.md  Packets.txt  TODO
src/: FVector2.h  IServer.h  PacketDistributor.h  Packets.h  Server.h  Vector2.h  main.cpp
src/Game/: Character.h  CharacterMover.h  ICharacter.h  ICharacterMover.h  IPlayer.h  Player.h
src/Net/: IIPAddress.h  IPAddress.h  ITcpSocket.h  IUdpSocket.h  NullTcpSocket.h  SocketAddress.h  TcpSocket.h  UdpSocket.h
test/: Mocks.h  PacketDistributorTest.cpp  PacketsTest.cpp  ServerTest.cpp  Vector2Test.cpp  test.cpp
test/Game/: CharacterMoverTest.cpp  CharacterTest.cpp  PlayerTest.cpp
test/Net/: IPAddressTest.cpp  SocketAddressTest.cpp  TcpSocketTest.cpp  UdpSocketTest.cpp
